# playground

./: .gitignore  LICENSE
dotnet_devicenet_hid/: Program.cs  dotnet_devicenet_hid.csproj  dotnet_devicenet_hid.sln
dotnet_hidsharp/: HidDeviceManager.cs  Program.cs  dotnet_hidsharp.sln
dotnet_usb_hid/: dotnet_usb_hid.sln
esp32arduino-busservos/: platformio.ini
esp32arduino-multisensor-rgb-voice-mqtt/: platformio.ini
esp32arduino-nau8822/: platformio.ini
esp32arduino-pwm_dimmer_web_controlled/: platformio.ini
esp32arduino-sim7000e/: platformio.ini
esp32arduino-sim7080g/: platformio.ini
espidf-adc_callback_highspeed/: CMakeLists.txt  sdkconfig  sdkconfig.old
espidf-ds18b20/: CMakeLists.txt
espidf-i2c_scanner/: CMakeLists.txt  log.txt  test für forum.txt
espidf-i2c_test/: CMakeLists.txt
espidf-mainsmonitor/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
espidf-multisensor-rgb-voice-mqtt/: CMakeLists.txt  flows.json  sdkconfig.old
espidf-nau8822/: CMakeLists.txt  sdkconfig  sdkconfig.old
espidf-opcua/: CMakeLists.txt  readme.md
espidf-pidt1controller/: CMakeLists.txt  sdkconfig
espidf-rotenc/: CMakeLists.txt  sdkconfig
espidf-rsa_public_key/: CMakeLists.txt
espidf-sim7080/: CMakeLists.txt
espidf-simplemenudemo/: CMakeLists.txt  README.md  arial_and_symbols_16px1bpp.cc  espidf-simplemenudemo.code-workspace  g2b.ts  package-lock.json  partitions.csv  symbols.hh  tsconfig.json
espidf-sml_parser/: CMakeLists.txt  sdkconfig  sdkconfig.old
espidf-sml_parser/components/sml/: CMakeLists.txt  sml_transport.c
espidf-spilcd/: CMakeLists.txt  arial_14_glcd.ts  glyps.hh  (+11 more)
stm32-cmake-template_with_spilcd/libgpiostm32/: CMakeLists.txt
stm32f0-ST7789/libspilcd16/: CMakeLists.txt
stm32f0-ST7789/libspilcd16/include/spilcd16/: spilcd16.hpp  st7789.hpp
(+411 files in other folders)
